--- a/index.html
+++ b/index.html
@@ -9,8 +9,22 @@
 
 <body>
    <header>Macflix</header> 
-   <h1>ATRAVÉS DO ARANHAVERSO SUPERA O PRIMEIRO FILME?</h1>
-#homem-aranha
+
+<section class="chamada">
+
+
+   <div classe="chamada-texto">
+   <h1>A Garota Perfeita um dos melhores filmes que ja assisti</h1>
+<p>esse filme é um dos melhores filmes ja lançados até hoje</p>
+</div>
+
+<div>
+<iframe width="560" heith="315" src="<iframe width="560" height="315" src="https://www.youtube.com/embed/_2a3MOrRZ0A?si=qCIiaRQLFsg-SSIG" 
+title="YouTube video player" 
+frameborder="0" 
+allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+referrerpolicy="strict-origin-when-cross-origin" 
+allowfullscreen></iframe>" frameborder="0"></iframe>
+
 </body>
 </html>
-<iframe src="" frameborder="0"></iframe>
