--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </div>
 
 <div>
-<iframe width="560" heith="315" src="<iframe width="560" height="315" src="https://www.youtube.com/embed/_2a3MOrRZ0A?si=qCIiaRQLFsg-SSIG" 
+<iframe width="560" heigth="315" src="https://www.youtube.com/embed/_2a3MOrRZ0A?si=qCIiaRQLFsg-SSIG" 
 title="YouTube video player" 
 frameborder="0" 
 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
