--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; pic
 referrerpolicy="strict-origin-when-cross-origin" 
 allowfullscreen></iframe>" frameborder="0"></iframe>
 </div>
-<section
+</section>
 <section class="categoria">
         <h2>Filmes e séries</h2>
         <div class="categoria-videos">
